Interpret (#3)
* Interpret wip

* minor fixes + teavm

* Interpret wip

* Interpret wip

* Semantic anal wip

* Semantic anal wip

* Add presentation link