@@ -5,6 +5,6 @@ import dynamic.semantic.Span;
 public class ValidationException extends Exception {
 
   public ValidationException(Span span, String msg) {
-    super("%s %s".formatted(span, msg));
+    super(String.format("%s %s", span, msg));
   }
 }
