@@ -11,13 +11,13 @@ public class CheckUtils {
 
   public static void checkVarDeclared(Id id, ValidationContext context) throws ValidationException {
     if (!context.containDecl(id.name)) {
-      throw new ValidationException(id.span, "Undeclared variable %s".formatted(id.name));
+      throw new ValidationException(id.span, String.format("Undeclared variable %s", id.name));
     }
   }
 
   public static void checkVarNotDeclared(Id id, ValidationContext context) throws ValidationException {
     if (context.containDeclInCurScope(id.name)) {
-      throw new ValidationException(id.span, "Var %s is already defined".formatted(id.name));
+      throw new ValidationException(id.span, String.format("Var %s is already defined", id.name));
     }
   }
 
@@ -28,7 +28,7 @@ public class CheckUtils {
 
   public static void checkTypes(Type expected, Type got, Span span) throws ValidationException {
     if (!TypeUtils.checkType(expected, got)) {
-      throw new ValidationException(span, "Expected %s, but %s got".formatted(expected, got));
+      throw new ValidationException(span, String.format("Expected %s, but %s got", expected, got));
     }
   }
 }
