@@ -11,7 +11,7 @@ import java.util.List;
 public class TypeUtils {
 
   public static boolean checkType(Type expected, Type got) {
-    return got == null || expected == got;
+    return expected == null || got == null || expected == got;
   }
 
   public static Type checkUnOpType(
@@ -24,7 +24,7 @@ public class TypeUtils {
     for (var pair: possible) {
       if (checkType(pair.first, paramType)) return pair.second;
     }
-    throw new ValidationException(span, "Illegal param type %s for unary operation %s".formatted(paramType, type));
+    throw new ValidationException(span, String.format("Illegal param type %s for unary operation %s", paramType, type));
   }
 
   public static Type checkBiOpType(
@@ -38,7 +38,7 @@ public class TypeUtils {
     for (var triple: possible) {
       if (checkType(triple.first, leftParam) && checkType(triple.second, rightParam)) return triple.third;
     }
-    throw new ValidationException(span, "Illegal param types %s, %s for binary operation %s".formatted(leftParam, rightParam, type));
+    throw new ValidationException(span, String.format("Illegal param types %s, %s for binary operation %s", leftParam, rightParam, type));
   }
 
   // Param -> Result
@@ -58,16 +58,13 @@ public class TypeUtils {
       case AND, OR, XOR -> List.of(new Triple<>(Type.BOOL, Type.BOOL, Type.BOOL));
       case LE, LE_EQ, GR, GR_EQ -> List.of(
           new Triple<>(Type.INT, Type.INT, Type.BOOL),
+          new Triple<>(Type.INT, Type.REAL, Type.BOOL),
+          new Triple<>(Type.REAL, Type.INT, Type.BOOL),
           new Triple<>(Type.REAL, Type.REAL, Type.BOOL),
           new Triple<>(Type.STRING, Type.STRING, Type.BOOL)
       );
-      case EQ, NOT_EQ -> List.of(
-          new Triple<>(Type.INT, Type.INT, Type.BOOL),
-          new Triple<>(Type.REAL, Type.REAL, Type.BOOL),
-          new Triple<>(Type.STRING, Type.STRING, Type.BOOL),
-          new Triple<>(Type.BOOL, Type.BOOL, Type.BOOL),
-          new Triple<>(Type.ARRAY, Type.ARRAY, Type.BOOL),
-          new Triple<>(Type.TUPLE, Type.TUPLE, Type.BOOL)
+      case EQ, NOT_EQ, REF_EQ, REF_NOT_EQ -> List.of(
+          new Triple<>(null, null, Type.BOOL)
       );
       case MINUS, DIV, TIMES -> List.of(
           new Triple<>(Type.INT, Type.INT, Type.INT),
@@ -81,8 +78,16 @@ public class TypeUtils {
           new Triple<>(Type.INT, Type.REAL, Type.REAL),
           new Triple<>(Type.REAL, Type.REAL, Type.REAL),
           new Triple<>(Type.ARRAY, Type.ARRAY, Type.ARRAY),
-          new Triple<>(Type.TUPLE, Type.TUPLE, Type.TUPLE)
+          new Triple<>(Type.TUPLE, Type.TUPLE, Type.TUPLE),
+          new Triple<>(null, Type.STRING, Type.STRING),
+          new Triple<>(Type.STRING, null, Type.STRING)
+      );
+      case MOD -> List.of(
+          new Triple<>(Type.INT, Type.INT, Type.INT)
       );
     };
   }
 }
+/*
+
+ */
